Fixes arrow during expand-collapse sections in Schema Editor

--- a/cdap-ui/app/cdap/components/SchemaEditor/MapSchemaRow/MapSchemaRow.less
+++ b/cdap-ui/app/cdap/components/SchemaEditor/MapSchemaRow/MapSchemaRow.less
@@ -25,7 +25,8 @@
         display: inline-block;
         position: relative;
 
-        .fa-caret-down {
+        .fa-caret-down,
+        .fa-caret-right {
           position: absolute;
           bottom: -2px;
           left: 10px;
