--- a/cdap-ui/app/cdap/components/SchemaEditor/SchemaEditor.less
+++ b/cdap-ui/app/cdap/components/SchemaEditor/SchemaEditor.less
@@ -119,7 +119,8 @@
           box-shadow: rgba(1, 0, 0, 0.25) 1px -1px 7px;
           border-radius: 4px;
           position: relative;
-          .fa-caret-down {
+          .fa-caret-down,
+          .fa-caret-right {
             position: absolute;
             bottom: -2px;
             left: 5px;
